Add Lea's picture to the staff page.

--- a/staff.html.in
+++ b/staff.html.in
@@ -40,17 +40,18 @@ Portland, OR, and Stevenson and Vancouver, WA, and is active in both the
 Portland and Southwest Washington State Branches of the RSCDS.</p>
 
 	<h2>Lea Maiolo</h2>
-	<p>Lea Maiolo started Scottish Country Dancing at the age of 13 when
-her dad spotted an ad in a newspaper and thought that folk dancing would be
-something she would enjoy. She had done ballet and tap as a child, and had
-continued to try that on and off through the years, but Lea was immediately
-taken with Scottish. She started in David Brandon's class in South Pasadena.
-Lea and her dad soon branched out to several classes a week, later including
-highland class with Fred DeMarse. Lea joined the Los Angeles Branch
-demonstration team a year or two after she started dancing, and began teaching
-the Eagle Rock class of the San Gabriel Valley Branch occasionally a year or
-two after that. She got her preliminary teachers' certificate under Mary
-Brandon's tutelage in 2002.</p>
+	<p><img src="lea_maiolo.jpg" width="190" height="220" alt="Lea Maiolo"
+style="float: left; margin-right: 1em;"/>Lea Maiolo started Scottish Country
+Dancing at the age of 13 when her dad spotted an ad in a newspaper and thought
+that folk dancing would be something she would enjoy. She had done ballet and
+tap as a child, and had continued to try that on and off through the years, but
+Lea was immediately taken with Scottish. She started in David Brandon's class
+in South Pasadena.  Lea and her dad soon branched out to several classes a
+week, later including highland class with Fred DeMarse. Lea joined the Los
+Angeles Branch demonstration team a year or two after she started dancing, and
+began teaching the Eagle Rock class of the San Gabriel Valley Branch
+occasionally a year or two after that. She got her preliminary teachers'
+certificate under Mary Brandon's tutelage in 2002.</p>
 
 	<p>Lea graduated from the Fashion Institute of Design and Merchandising
 in 2003 and began working as a costumer on various commercials, films, and TV
