index: Post a blurb about the new map options.

--- a/index.html.in
+++ b/index.html.in
@@ -1,5 +1,9 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
+	<p><b>13 Mar 2013:</b> The map on the <a
+href="schedule.html">schedule</a> page now features the Amtrak station and a
+link to a map with bicycle routes.</p>
+
 	<p><b>24 Feb 2013:</b> Registration is now open!</p>
 
 	<p><b>20 Feb 2013:</b> The schedule has been posted.</p>
