--- a/ball.html.in
+++ b/ball.html.in
@@ -10,6 +10,7 @@ will be at 7:15pm.</p>
 	<p>Lisa Scott, Leslie Hirsch and Linda Danielson</p>
 
 	<h2>Program:</h2>
+	<p>View our downloadable <a href="cribs.pdf">crib sheet</a>!</p>
 <table>
 <tr><td>Machine Without Horses</td>	<td>RSCDS Bk 12.12</td></tr>
 <tr><td>Bridge of Nairn</td>		<td>RSCDS Bk 13.11</td></tr>
