Clarify that a YWW ticket is also a Dinner Dance ticket.

--- a/ball.html.in
+++ b/ball.html.in
@@ -4,7 +4,9 @@
 Southwest Washington State Branch's annual dinner dance.  Taking place on
 Saturday, May 4th at St. Luke's Episcopal Church, this year's theme is "Dance
 Among the Stars."  There will be a catered dinner at 6:00pm and the Grand March
-will be at 7:15pm.</p>
+will be at 7:15pm.  Admittance to the Dinner Dance is included with Youth
+Weekend West registration; you do not need to pay or register separately for
+the two events.</p>
 
 	<h2>Musicians:</h2>
 	<p>Lisa Scott, Leslie Hirsch and Linda Danielson</p>
