Add a gigantic page relating to travelling here.

--- a/index.html.in
+++ b/index.html.in
@@ -1,5 +1,8 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
+	<p><b>19 Mar 2013:</b> There's now a <a href="cribs.pdf">crib sheet</a>
+for the ball.</p>
+
 	<p><b>13 Mar 2013:</b> The map on the <a
 href="schedule.html">schedule</a> page now features the Amtrak station and a
 link to a map with bicycle routes.</p>
