--- a/index.html.in
+++ b/index.html.in
@@ -1,5 +1,8 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
+	<p><b>20 Mar 2013:</b> Check out our two new pages: <a href="travel.html">travel</a> and 
+some generalized information about <a href="analytics.html">who's coming</a>.</p>
+
 	<p><b>19 Mar 2013:</b> There's now a <a href="cribs.pdf">crib sheet</a>
 for the ball.</p>
 
