Update crib sheet.

--- a/ball.html.in
+++ b/ball.html.in
@@ -12,7 +12,8 @@ the two events.</p>
 	<p>Lisa Scott, Leslie Hirsch and Linda Danielson</p>
 
 	<h2>Program:</h2>
-	<p>View our downloadable <a href="cribs.pdf">crib sheet</a>!</p>
+	<p>View our downloadable <a href="cribs.pdf">crib sheet</a>!
+Corrections were applied on 24 March.</p>
 <table>
 <tr><td>Machine Without Horses</td>	<td>RSCDS Bk 12.12</td></tr>
 <tr><td>Bridge of Nairn</td>		<td>RSCDS Bk 13.11</td></tr>
