--- a/classes.html.in
+++ b/classes.html.in
@@ -6,11 +6,15 @@ href="schedule.html">Schedule</a>.  Both classes will cover the same content
 and have the same teachers.</p>
 
 	<p>On Sunday, there will be a combined class at the Columbia Dance
-Center (location (B)).</p>
+Center (location (B).</p>
 
 	<h2>Electives</h2>
 	<p>There will be two elective classes that you can choose from:</p>
 	<ul>
-	<li><a href="http://www.youtube.com/watch?v=MZfqTbwwKHw">Thriller Zombie Dance</a></li>
-	<li><a href="http://www.youtube.com/watch?v=jO5NTRWlFe4">Norman Folk Dancing</a></li>
+	<li>Thriller Zombie Dance<br />
+<iframe width="640" height="480" src="http://www.youtube.com/embed/MZfqTbwwKHw?rel=0" frameborder="0" allowfullscreen></iframe></li>
+	<li>Norman Folk Dancing<br /><iframe width="640" height="360" src="http://www.youtube.com/embed/jO5NTRWlFe4?rel=0" frameborder="0" allowfullscreen></iframe></li>
 	</ul>
+
+
+
