travel: Tell people to confirm with Amtrak.

--- a/travel.html.in
+++ b/travel.html.in
@@ -74,6 +74,9 @@ Wash.:</p>
 	<li>Cascades #508 departs for Seattle at 6:30pm.</li>
 	</ul>
 
+<p>We recommend you confirm these arrival and departure times with Amtrak.
+Other trains are available, but these seem to fit best with our schedule.</p>
+
 	<h2>Bus</h2>
 	<p>The <a href="https://www.boltbus.com/">BoltBus</a> stop is at SW 6th
 and Salmon in Portland, which is directly south of the Amtrak station.  The
