classes: Fix parentheses.

--- a/classes.html.in
+++ b/classes.html.in
@@ -6,7 +6,7 @@ href="schedule.html">Schedule</a>.  Both classes will cover the same content
 and have the same teachers.</p>
 
 	<p>On Sunday, there will be a combined class at the Columbia Dance
-Center (location (B).</p>
+Center (location (B)).</p>
 
 	<h2>Electives</h2>
 	<p>There will be two elective classes that you can choose from:</p>
