Place a bike route map on the travel page. :P

--- a/index.html.in
+++ b/index.html.in
@@ -1,5 +1,7 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
+	<p><b>1 Apr 2013:</b> See biking instructions on the travel page!</p>
+
 	<p><b>24 Mar 2013:</b> Minor corrections were made to <i>The Teddy Bears' Picnic</i> dance on the crib sheet.</p>
 
 	<p><b>20 Mar 2013:</b> Check out our new <a href="travel.html">travel</a> page.</p>
