--- a/travel.html.in
+++ b/travel.html.in
@@ -106,4 +106,8 @@ the public transit section.</p>
 Interstate 5 bridge between Portland and Vancouver.  If you're not already
 familiar with biking around Vancouver and intend to ride your bicycle to Youth
 Weekend West, please contact Darrick for bicycle maps and route
-recommendations.</p>
+recommendations.  Here's what it looks like to ride from his house in SE
+Portland to downtown Vancouver:</p>
+
+	<!--[if !IE]><!--><object class="map" data="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=http:%2F%2Fyouthweekendwest.com%2Fbike.kml&amp;aq=&amp;sll=44.145447,-120.583402&amp;sspn=6.41726,16.259766&amp;ie=UTF8&amp;ll=45.59737,-122.6159&amp;spn=0.085655,0.18744&amp;t=m&amp;output=embed"></object><!--<![endif]--><!--[if IE]><iframe width="100%" height="460" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=http:%2F%2Fyouthweekendwest.com%2Fbike.kml&amp;aq=&amp;sll=44.145447,-120.583402&amp;sspn=6.41726,16.259766&amp;ie=UTF8&amp;ll=45.59737,-122.6159&amp;spn=0.085655,0.18744&amp;t=m&amp;output=embed"></iframe><![endif]-->
+<br /><small><a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=http:%2F%2Fyouthweekendwest.com%2Fbike.kml&amp;aq=&amp;sll=44.145447,-120.583402&amp;sspn=6.41726,16.259766&amp;ie=UTF8&amp;ll=45.59737,-122.6159&amp;spn=0.085655,0.18744&amp;t=m" style="color:#0000FF;text-align:left">View Larger Map</a></small>
