Minor tweaks to the ceildh page.

--- a/ceildh.html.in.in
+++ b/ceildh.html.in.in
@@ -10,7 +10,7 @@ participants, as well as several Scottish Country Dances.</p>
 
 	<h2>Program:</h2>
 	<p class="crib_dropdown">Click on the name of a dance to see its
-instructions.</p>
+crib sheet.</p>
 CRIB:ceildh.txt
 
 	<h2>Directions:</h2>
