ball: Convert the ball crib to the new HTML format.

--- a/ball.html.in.in
+++ b/ball.html.in.in
@@ -12,27 +12,9 @@ the two events.</p>
 	<p>Lisa Scott, Leslie Hirsch and Linda Danielson</p>
 
 	<h2>Program:</h2>
-	<p>View our downloadable <a href="cribs.pdf">crib sheet</a>!
-Corrections were applied on 24 March.</p>
-<table>
-<tr><td>Machine Without Horses</td>	<td>RSCDS Bk 12.12</td></tr>
-<tr><td>Bridge of Nairn</td>		<td>RSCDS Bk 13.11</td></tr>
-<tr><td>Dashing White Sergeant</td>	<td>RSCDS Bk 3.2</td></tr>
-<tr><td>A Trip to the Drakensberg</td>	<td>RSCDS Bk 38.8</td></tr>
-<tr><td>Balquidder Strathspey</td>	<td>RSCDS Bk 24.2</td></tr>
-<tr><td>The Teddy Bears' Picnic</td>	<td>(adapted)</td></tr>
-<tr><td>Barley Bree</td>		<td>RSCDS Bk 8.4</td></tr>
-<tr><td>Silver Tassie</td>		<td>RSCDS Leaflet</td></tr>
-<tr><td>Round Reel of Eight</td>	<td>RSCDS Bk  27.7</td></tr>
-<tr><td>Bramble Bush</td>		<td>RSCDS Bk  25.3</td></tr>
-<tr><td>Miss Milligan's S'spey</td>	<td>RSCDS Leaflet</td></tr>
-<tr><td>Catch the Wind</td>		<td>The Island Bay Collection. RSCDS Bk.45.5</td></tr>
-<tr><td>Well Done Jack</td>		<td>RSCDS Bk  29.3</td></tr>
-<tr><td>Delvine Side</td>		<td>RSCDS Bk 2.9</td></tr>
-<tr><td>De'il Amang the Tailors</td>	<td>RSCDS  Bk 14.7</td></tr>
-
-<tr><td colspan="2">Highland (Pride of Erin) Waltz</td></tr>
-</table>
+	<p class="crib_dropdown">Click on the name of a dance to see its
+crib sheet.  The complete crib will be printed.</p>
+CRIB:ball.txt
 
 	<h2>Directions:</h2>
 	<p>The ball will be at St. Luke's Episcopal Church, 426 E. Fourth Plain Blvd., Vancouver, Wash:
