ball/ceildh: Fix minor typos.

--- a/ceildh.html.in.in
+++ b/ceildh.html.in.in
@@ -6,11 +6,11 @@ page).  We will have a number of acts contributed by other Youth Weekend West
 participants, as well as several Scottish Country Dances.</p>
 
 	<h2>Musicians:</h2>
-	<p>Cynthia Song and Maggie Hannahs</p>
+	<p>Cynthia Soohoo and Maggie Hannahs</p>
 
 	<h2>Program:</h2>
 	<p class="crib_dropdown">Click on the name of a dance to see its
-crib sheet.</p>
+crib sheet.  The complete crib will print on your printer.</p>
 CRIB:ceildh.txt
 
 	<h2>Directions:</h2>
