--- a/ball.html.in.in
+++ b/ball.html.in.in
@@ -13,7 +13,7 @@ the two events.</p>
 
 	<h2>Program:</h2>
 	<p class="crib_dropdown">Click on the name of a dance to see its
-crib sheet.  The complete crib will be printed.</p>
+crib sheet.  The complete crib will print on your printer.</p>
 CRIB:ball.txt
 
 	<h2>Directions:</h2>
