index: Update with news about the ceildh page.

--- a/index.html.in
+++ b/index.html.in
@@ -1,10 +1,15 @@
 	<h1>The 11th workshop and ball are coming up!</h1>
 
+	<p><b>4 Apr 2013:</b> We have a <a href="ceildh.html">ceildh</a>
+program for you to peruse!
+
 	<p><b>1 Apr 2013:</b> See biking instructions on the travel page!</p>
 
-	<p><b>24 Mar 2013:</b> Minor corrections were made to <i>The Teddy Bears' Picnic</i> dance on the crib sheet.</p>
+	<p><b>24 Mar 2013:</b> Minor corrections were made to <i>The Teddy
+Bears' Picnic</i> dance on the crib sheet.</p>
 
-	<p><b>20 Mar 2013:</b> Check out our new <a href="travel.html">travel</a> page.</p>
+	<p><b>20 Mar 2013:</b> Check out our new <a
+href="travel.html">travel</a> page.</p>
 
 	<p><b>19 Mar 2013:</b> There's now a <a href="cribs.pdf">crib sheet</a>
 for the ball.</p>
